terraform/modules/network/main.tf
// modules/network/main.tf

// Data source to retrieve details about the provided VPC
data "aws_vpc" "vpc_main" {
  id = var.vpc_id
}

// Fetch details about the specified subnet using the variable
data "aws_subnet" "subnet" {
  id = var.subnet_id
}

# Security Group | Allow SSH, HTTP, and additional ports
resource "aws_security_group" "allowHttpSsh" {
  name        = "allow_http_ssh"
  description = "Allow HTTP, SSH, and additional ports inbound traffic"
  vpc_id      = data.aws_vpc.vpc_main.id

  ingress {
    description      = "HTTP from everywhere"
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  ingress {
    description      = "SSH from everywhere"
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  ingress {
    description      = "Allow HTTP traffic on port 8080 from everywhere"
    from_port        = 8080
    to_port          = 8080
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  ingress {
    description      = "Allow HTTP traffic on port 8081 from everywhere"
    from_port        = 8081
    to_port          = 8081
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  ingress {
    description      = "Allow HTTP traffic on port 8082 from everywhere"
    from_port        = 8082
    to_port          = 8082
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }
}
